fix: loading button when session is ending
- fix margin when screen width get smaller
- fix lesson flashcard covering all action button

--- a/src/components/LessonCard/index.module.css
+++ b/src/components/LessonCard/index.module.css
@@ -19,6 +19,7 @@
     backface-visibility: hidden;
     top: 0;
     left: 0;
+    padding: 0.5rem;
 }
 
 .flip_card_back {
@@ -32,6 +33,7 @@
     transition: transform 1s ease;
     transform-style: preserve-3d;
     box-shadow: var(--secondary-color) 0px 3px 3px -1px;
+    white-space: wrap;
 }
 
 .is_flipped {
